--- a/index.css
+++ b/index.css
@@ -188,3 +188,15 @@ body {
 		flex-direction: column;
 	}
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+	html {
+	  transform: rotate(-90deg);
+	  transform-origin: left top;
+	  width: 100vh;
+	  overflow-x: hidden;
+	  position: absolute;
+	  top: 100%;
+	  left: 0;
+	}
+  }
