--- a/index.css
+++ b/index.css
@@ -75,15 +75,18 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	max-width: 80%;
-	max-height: 55vh;
+	max-height: 900px;
 	border-radius: 20px;
 	background-color: #ffffff;
 	box-shadow: 1px 33px 55px 1px #168799;
 }
 
+.cover-photo {
+	width: 100%;
+}
 
 .cover-photo img {
-	max-width: 100%;
+	width: 100%;
 	border-top-right-radius: 20px;
 	border-top-left-radius: 20px;
 }
@@ -91,8 +94,8 @@ body {
 .info-section  {	
 	width: 100%;
 	position: relative;
+	padding: 20px 60px;
 	top:-60px;
-	
 	height:200px;
 }
 
@@ -149,9 +152,9 @@ body {
 	
 }
 
-.summary-raw {
+.summary-row {
 	margin: 0 0.2em;
-	padding: 0 3%; 	
+	padding: 0 3%;	
 	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
 }
@@ -170,6 +173,39 @@ body {
 	letter-spacing: 1.5px;
 }
 
+/* Make it bigger on bigger screens */
+
+@media only screen and (min-width: 1168px) and (min-height: 657px) {
+	.info-section  {
+		top:-80px;
+		height: 300px;
+	}
+	
+	.profile-photo {
+		width: 150px;
+		height: 150px;
+	}
+	.user-name {
+		font-size: 1.5em
+	}
+	
+	.user-city {
+		font-size: 1.2em;
+	}
+	.profile-summary {
+		margin: 1.5em;
+	}
+	.summary-row {
+		margin: 0 0.4em;
+		padding: 0 4%;
+		font-size: 1.5em;	
+		text-align: center;
+		font-family: Arial, Helvetica, sans-serif;
+	}
+}
+
+/* Responsive background bubbles */
+
 @media only screen and (max-width: 640px) {
 	body {
 		background-image: url("imgs/bg-pattern-top.svg"), url("imgs/bg-pattern-bottom.svg");
@@ -178,6 +214,8 @@ body {
 		background-position: -45vw -45vw, 55vw 65vh;
 	}
 }
+
+/* Super small width */
 
 @media only screen and (max-width: 250px) {
 	.info-section {
